--- a/templates/edit_computer.html
+++ b/templates/edit_computer.html
@@ -71,7 +71,7 @@
         <h1>Edit Computer</h1>
         <form action="{{ url_for('edit_computer', serial_number=computer.serial_number) }}" method="post">
             <label for="department_number">Department Number:</label>
-            <input type="number" id="department_number" name="department_number" value="{{ computer.department_number }}" required>
+            <input type="number" id="department_number" name="department_number" min="1" max="1000" value="{{ computer.department_number }}" required>
             
             <input type="submit" value="Update">
         </form>
