fit: Добавлен поиск по бренду

--- a/templates/add_configuration.html
+++ b/templates/add_configuration.html
@@ -74,7 +74,7 @@
             <input type="text" id="brand" name="brand" minlength="2" maxlength="30" required>
             
             <label for="department_number">Department:</label>
-            <input type="text" id="department_number" name="department_number" minlength="2" maxlength="50" required>
+            <input type="number" id="department_number" name="department_number" min="1" max="1000" required>
             
             <label for="num_terminals">Terminals:</label>
             <input type="number" id="num_terminals" name="num_terminals" min="1" max="255" required>
